# Laba1_OS

./: .gitignore  CMakeLists.txt
Report_OS_D/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
include/: crossplatform.h  stringutils.h
src/: child.c  crossplatform.c  parent.c  stringutils.c
